# cpp.CloveceNehnevajSa

./: .gitignore  CMakeLists.txt  README.md
navrh/: Semestralna_Praca_POS_Ukazka.docx  ownMakefile.txt  poznamky.txt
src/: main-client.cpp  main-kocka.cpp  main-server.cpp  main.cpp
src/Hra/: Hrac.cpp  Hrac.h  HraciaPlocha.cpp  HraciaPlocha.h  Policko.cpp  Policko.h
src/communication/: definitions.c  definitions.h
src/communication/client/: Client.cpp  Client.h
src/communication/server/: Server.cpp  Server.h
src/gui/main/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/popups/: NumberOfPlayers.h  Popup.h
src/helpers/: Kocka.cpp  Kocka.h
